feat: add content to blog.html contact.html index.html portfolio.html resume.html

--- a/contact.html
+++ b/contact.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>
-            Grace's Contact Info
-        </title>
-    </head>
-    <body>
-        
-    </body>
+  <head>
+    <title>Grace's Contact Info</title>
+  </head>
+  <body>
+    <nav>
+      <div class="navbar">
+        <h1>Grace's Website</h1>
+      </div>
+    </nav>
+    <main></main>
+    <footer>
+      <div class="footer">© 2023 <Grace's Website> | All Rights Reserved</div>
+    </footer>
+  </body>
 </html>
