--- a/index.html
+++ b/index.html
@@ -1,9 +1,36 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Grace's Personal Website</title>
+    <title>Grace's Website</title>
   </head>
   <body>
-    Hello World! This is my website.
+    <nav>
+      <div class="navbar">
+        <h1>Grace's Website</h1>
+      </div>
+    </nav>
+    <main>
+      <h1>Hi! Welcome to my website!</h1>
+      <div class="about">
+        <div class="about-image"></div>
+        <div class="about-text">
+          <p>
+            My name is <strong>Grace</strong> and I am a freshman
+            <em>computer science</em> major
+          </p>
+          <p>
+            My hobbies include: <br />
+            -hiking<br />
+            -photography <br />
+            -hammocking<br />
+            -hanging with friends
+          </p>
+          <h3>Enjoy exploring my website!</h3>
+        </div>
+      </div>
+    </main>
+    <footer>
+      <div class="footer">© 2023 <Grace's Website> | All Rights Reserved</div>
+    </footer>
   </body>
 </html>
