--- a/resume.html
+++ b/resume.html
@@ -1,11 +1,51 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>
-            Grace's Resume
-        </title>
-    </head>
-    <body>
-        
-    </body>
+  <head>
+    <title>Grace's Resume</title>
+  </head>
+  <body>
+    <nav>
+      <div class="navbar">
+        <h1>Grace's Website</h1>
+      </div>
+    </nav>
+    <main>
+      <h1>Resume</h1>
+      <div class="resume">
+        <div class="section">
+          <div class="section-title">
+            <h2>Education</h2>
+          </div>
+          <section></section>
+        </div>
+        <div class="section">
+          <div class="section-title">
+            <h2>Experience</h2>
+          </div>
+          <section></section>
+        </div>
+        <div class="section">
+          <div class="section-title">
+            <h2>Projects</h2>
+          </div>
+          <section></section>
+        </div>
+        <div class="section">
+          <div class="section-title">
+            <h2>Skills</h2>
+          </div>
+          <section></section>
+        </div>
+        <div class="section">
+          <div class="section-title">
+            <h2>Activities</h2>
+          </div>
+          <section></section>
+        </div>
+      </div>
+    </main>
+    <footer>
+      <div class="footer">© 2023 <Grace's Website> | All Rights Reserved</div>
+    </footer>
+  </body>
 </html>
