--- a/blog.html
+++ b/blog.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>
-            Grace's Blog
-        </title>
-    </head>
-    <body>
-        
-    </body>
+  <head>
+    <title>Grace's Blog</title>
+  </head>
+  <body>
+    <nav>
+      <div class="navbar">
+        <h1>Grace's Website</h1>
+      </div>
+    </nav>
+    <main>
+      <div class="page-title">
+        <h1>Grace's Blog</h1>
+      </div>
+    </main>
+    <footer>
+      <div class="footer">© 2023 <Grace's Website> | All Rights Reserved</div>
+    </footer>
+  </body>
 </html>
