--- a/portfolio.html
+++ b/portfolio.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>
-            Grace's Portfolio
-        </title>
-    </head>
-    <body>
-        
-    </body>
+  <head>
+    <title>Grace's Portfolio</title>
+  </head>
+  <body>
+    <nav>
+      <div class="navbar">
+        <h1>Grace's Website</h1>
+      </div>
+    </nav>
+    <main>
+        <h1>Portfolio</h1>
+        <div class="project">
+            
+        </div>
+    </main>
+    <footer>
+      <div class="footer">© 2023 <Grace's Website> | All Rights Reserved</div>
+    </footer>
+  </body>
 </html>
