feat: add content to index.html blog.html contact.html me.jpg portfolio.html resume.html resume.pdf sample.png

--- a/index.html
+++ b/index.html
@@ -6,13 +6,28 @@
   <body>
     <nav>
       <div class="navbar">
+        <h1 class="logo"><a href="index.html">personal website</a></h1>
+        <ul class="nav-list">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="blog.html">Blog</a></li>
+          <li><a href="portfolio.html">Portfolio</a></li>
+          <li><a href="resume.html">Resume</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
         <h1>Grace's Website</h1>
       </div>
     </nav>
     <main>
       <h1>Hi! Welcome to my website!</h1>
       <div class="about">
-        <div class="about-image"></div>
+        <div class="about-image">
+          <img
+            src="me.jpg"
+            alt="A picture of me hiking in the woods"
+            height="300"
+            width="200"
+          />
+        </div>
         <div class="about-text">
           <p>
             My name is <strong>Grace</strong> and I am a freshman
