--- a/blog.html
+++ b/blog.html
@@ -6,6 +6,16 @@
   <body>
     <nav>
       <div class="navbar">
+        <h1 class="logo">
+          <a href="index.html">personal website</a>
+        </h1>
+        <ul class="nav-list">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="blog.html">Blog</a></li>
+          <li><a href="portfolio.html">Portfolio</a></li>
+          <li><a href="resume.html">Resume</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
         <h1>Grace's Website</h1>
       </div>
     </nav>
