--- a/contact.html
+++ b/contact.html
@@ -6,10 +6,51 @@
   <body>
     <nav>
       <div class="navbar">
+        <h1 class="logo">
+          <a href="index.html">personal website</a>
+        </h1>
+        <ul class="nav-list">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="blog.html">Blog</a></li>
+          <li><a href="portfolio.html">Portfolio</a></li>
+          <li><a href="resume.html">Resume</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
         <h1>Grace's Website</h1>
       </div>
     </nav>
-    <main></main>
+    <main>
+      <h1 class="page-title">Contact</h1>
+      <div class="contact-form">
+        <form>
+          <label for="name">Name:</label>
+          <input
+            type="text"
+            id="name"
+            name="name"
+            placeholder="Name"
+            required
+          />
+          <label for="email">Email:</label>
+          <input
+            type="email"
+            id="email"
+            name="email"
+            placeholder="Email"
+            required
+          />
+          <label for="message">Message:</label>
+          <textarea
+            id="message"
+            name="message"
+            placeholder="Message"
+            required
+          ></textarea>
+
+          <input type="submit" value="Submit" />
+        </form>
+      </div>
+    </main>
     <footer>
       <div class="footer">© 2023 <Grace's Website> | All Rights Reserved</div>
     </footer>
