--- a/portfolio.html
+++ b/portfolio.html
@@ -6,14 +6,37 @@
   <body>
     <nav>
       <div class="navbar">
+        <h1 class="logo">
+          <a href="index.html">personal website</a>
+        </h1>
+        <ul class="nav-list">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="blog.html">Blog</a></li>
+          <li><a href="portfolio.html">Portfolio</a></li>
+          <li><a href="resume.html">Resume</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
         <h1>Grace's Website</h1>
       </div>
     </nav>
     <main>
-        <h1>Portfolio</h1>
-        <div class="project">
-            
+      <h1 class="page-title">Portfolio</h1>
+      <div class="project">
+        <a href="index.html">
+          <img
+            src="sample.png"
+            alt="A screenshot of my website"
+            width="350"
+            height="300"
+          />
+        </a>
+        <div class="projet-details">
+          <p><strong>Description of Project</strong></p>
+          <a href="index.html">
+            <h4>LEARN MORE</h4>
+          </a>
         </div>
+      </div>
     </main>
     <footer>
       <div class="footer">© 2023 <Grace's Website> | All Rights Reserved</div>
