--- a/blog.html
+++ b/blog.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>Grace's Blog</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <nav>
