--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <nav>
       <div class="navbar">
-        <h1 class="logo"><a href="index.html">personal website</a></h1>
+        <h1 class="logo"><a href="index.html">my website :)</a></h1>
         <ul class="nav-list">
           <li><a href="index.html">Home</a></li>
           <li><a href="blog.html">Blog</a></li>
@@ -15,7 +15,7 @@
           <li><a href="resume.html">Resume</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
-        <h1>Grace's Website</h1>
+     
       </div>
     </nav>
     <main>
