--- a/portfolio.html
+++ b/portfolio.html
@@ -8,7 +8,7 @@
     <nav>
       <div class="navbar">
         <h1 class="logo">
-          <a href="index.html">personal website</a>
+          <a href="index.html">my website :)</a>
         </h1>
         <ul class="nav-list">
           <li><a href="index.html">Home</a></li>
@@ -17,7 +17,7 @@
           <li><a href="resume.html">Resume</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
-        <h1>Grace's Website</h1>
+      
       </div>
     </nav>
     <main>
